added // to HTML

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             </div>
         </div>
     </footer>
+    <!-- Hamburger -->
     <script>
         (function ($) { // Begin jQuery
             $(function () { // DOM ready
